apps/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
  - port: 80
    targetPort: http
    name: http
